crates/plotnik-lib/tests/03-analyze/definitions/error_captured_void_ref.txt
Void = {(a) (b)}
Q = (call (Void) @v)
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:2:11
  |
1 | Void = {(a) (b)}
  |        --------- defined here
2 | Q = (call (Void) @v)
  |           ^^^^^^
-------------------- SYMBOLS ---------------------
Void
Q
  Void
